--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ name: Jonathan Coutinho
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 paginate: 5
+paginate_path: "/blog/page:num/"
